--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-date-ranges": "^2.5.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-modals": "^0.22.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "yarn": "^1.22.19"
